test/Fail/TypeBasedTermination/BadRefl.err
TypeBasedTermination/BadRefl.agda:10.1-11.20: error: [TerminationIssue]
Termination checking failed for the following functions:
  p
Problematic calls:
  p refl x
    (at TypeBasedTermination/BadRefl.agda:11.12-13)
